--- a/style.css
+++ b/style.css
@@ -92,3 +92,15 @@ p {
   box-shadow: var(--box-shadow);
   color: white;
 }
+@media screen and (max-width: 576px) {
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  .primary-link {
+    padding: 13px 7px;
+  }
+  .secondary-link {
+    padding: 13px 7px;
+  }
+}
